plugins {
    id 'java'
}

apply plugin: 'idea'

group 'FraudTek2D'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

import org.gradle.internal.os.OperatingSystem

project.ext.lwjglVersion = "3.2.3"
project.ext.jomlVersion = "1.9.15"
project.ext.steamworks4jVersion = "1.8.0"
project.ext.lwjglNatives = "natives-windows"

switch (OperatingSystem.current()) {
    case OperatingSystem.LINUX:
        project.ext.lwjglNatives = "natives-linux"
        break
    case OperatingSystem.MAC_OS:
        project.ext.lwjglNatives = "natives-macos"
        break
    case OperatingSystem.WINDOWS:
        project.ext.lwjglNatives = "natives-windows"
        break
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'net.java.dev.jna:jna:4.2.1'
    implementation "org.lwjgl:lwjgl:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-assimp:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-glfw:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-openal:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-opengl:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-stb:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
    implementation "org.joml:joml:${jomlVersion}"
    implementation "com.code-disaster.steamworks4j:steamworks4j:${steamworks4jVersion}"
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'io.imgui.java:binding:1.75-0.7.2'
    implementation 'io.imgui.java:lwjgl3:1.75-0.7.2'
    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-assimp:$lwjglVersion:$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw:$lwjglVersion:$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openal:$lwjglVersion:$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl:$lwjglVersion:$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-stb:$lwjglVersion:$lwjglNatives"
    runtimeOnly "io.imgui.java:$lwjglNatives:1.75-0.7.2"

    compile fileTree(include: ['*.jar'], dir: 'libs/JChroma')
    compile fileTree(include: ['*.jar'], dir: 'libs/steam')
}
jar {
    archiveName = 'Name.jar'

    manifest {
        attributes 'Main-Class': 'engine.Game',
                'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' '),
                'Implementation-Version': project.version
    }

    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {}
}